Make Header fixed, add subheader to events."

--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -112,12 +112,15 @@ header{
 	width: 100%;
 	background: black;
 	height: 5.75rem;
-	position: relative;
+	position: fixed;
+	z-index: 99999999999;
 }
 .header-teal{
 	background:$teal;
 }
-
+.content-area {
+	padding-top: 5.75rem;
+}
 .header-logo{
 	height: 40px;
 	width:135px;
@@ -166,15 +169,20 @@ header{
 		display: block;
 		width: 100%;
 		background: black;
-		height: 5.75rem;
+		height: 147px;
 		position: relative;
 	}
 	.desktop-header-logo{
 		display:block;
 		position: absolute;
-		height: 5rem;
-		padding-top:1rem;
-		width: 28vw;
+		height: 5.25rem;
+		margin: 43px 0 0 0.75rem;
+		width: auto;
+	}
+	.main-navigation {
+		height: 5.25rem;
+		margin: 43px 0 0;
+
 	}
 	.menu{
 		display: flex;
@@ -196,5 +204,12 @@ header{
     display: flex;
     font-size: 1rem;
     margin-left: auto;
+	}
+	.site-header {
+		height: 147px;
+
+	}
+	.content-area {
+		padding-top: 147px;
 	}
 }	
