--- a/themes/csl/sass/_seasonal-events.scss
+++ b/themes/csl/sass/_seasonal-events.scss
@@ -1,24 +1,9 @@
 .term-seasonal {
-  .sub-nav {
-    display: none;
-    @include desktop {
-      display: block;
-    }
-    position: fixed;
-    width:100%;
-    z-index: 1001;
-    color: $white;
-    background-color: $trans-black;
-    list-style: none;
-    padding-left: 2.5%;
-    li {
-      display: inline;
-    }
-  }
   article {
-    background-size: auto 300px;
+    background-size: auto 350px;
+    background-position: center top;  
     background-repeat: no-repeat;
-    padding-top: 300px;
+    padding-top: 350px;
     @include desktop {
       color: $white;
       height: 900px;
@@ -31,11 +16,28 @@
     padding-right: 2.5%;
     @include desktop {
       position: absolute;
-      top: 12%;
+      top: 100px;
       display: inline-block;
       background: $trans-black;
       width: 60%;
       padding-right: 5%;
     }
+  }
+}
+//also used on weekly events
+.sub-nav {
+  display: none;
+  @include desktop {
+    display: block;
+  }
+  position: fixed;
+  width:100%;
+  z-index: 1001;
+  color: $white;
+  background-color: $trans-black;
+  list-style: none;
+  padding-left: 2.5%;
+  li {
+    display: inline;
   }
 }
