--- a/themes/csl/sass/_owl-theme-default.scss
+++ b/themes/csl/sass/_owl-theme-default.scss
@@ -9,19 +9,31 @@
 .owl-theme .owl-nav {
   .owl-prev {
     position: absolute;
-    top: 50%;
+    top: 175px;
+    @include desktop {
+      top: 50%;
+    }
+    
     &:before {
       font-family: FontAwesome;
       content: "\f053";
+      font-size: 40px;
+      line-height: 60px;
     }
   }
   .owl-next {
     position: absolute;
     right: 0;
-    top: 50%;
+    top: 175px;
+    @include desktop {
+      top: 50%;
+    }
+    
     &:after {
       font-family: FontAwesome;
       content: "\f054";
+      font-size: 40px;
+      line-height: 60px;
     }
   }
   
@@ -32,8 +44,8 @@
     background: $trans-black;
     line-height: 30px;
     text-align: center;
-    height: 30px;
-    width: 40px;
+    height: 60px;
+    width: 65px;
     cursor: pointer;
     border-radius: 3px; }
     .owl-theme .owl-nav [class*='owl-']:hover {
@@ -50,7 +62,11 @@
 .owl-theme .owl-dots {
   text-align: center;
   position: absolute;
-  bottom: 12px;
+  top: 323px;
+  @include desktop {
+    top: 866px;
+  }
+  
   width: 100%; 
   -webkit-tap-highlight-color: transparent; }
   .owl-theme .owl-dots .owl-dot {
