aligned mobile menu with social icons

--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -40,13 +40,11 @@
 	display:none;
 }
 .toggle-open{
-	box-shadow: none;
 	border: none;
 	background:none;
 	position:absolute;
-	align-self:center;
-	height:3.5rem;
 	z-index:9999;
+	top:30%;
 	
 }
 
