--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -918,15 +918,11 @@ object {
   display: none; }
 
 .toggle-open {
-  -webkit-box-shadow: none;
-          box-shadow: none;
   border: none;
   background: none;
   position: absolute;
-  -ms-flex-item-align: center;
-      align-self: center;
-  height: 3.5rem;
-  z-index: 9999; }
+  z-index: 9999;
+  top: 30%; }
 
 .mobile-menu {
   display: none;
