fixed issues no <br>

--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -176,12 +176,13 @@
         font-weight: bold;
         position: absolute;
         top: 1.2rem;
-        left: 42px;
+        left: 40px;
         text-align: center;
         color: $teal;
         line-height: 27px;
         font-size: 1.7rem;
         text-transform: uppercase;
+        max-width: 50%;
       }
     }
   // home
