added a class of content area to the news archive primary div to fix the padding of the header

--- a/themes/csl/sass/_news-page.scss
+++ b/themes/csl/sass/_news-page.scss
@@ -15,6 +15,7 @@
     text-transform: uppercase;
     color:$black;
     padding-left:2%;
+    margin-top: 5rem;
   }
   .type-news{
     position: relative;
@@ -56,7 +57,7 @@
     .page-title{
       color:#FFFFFF;
       background:$black;
-      width:40%;
+      width:49%;
     }
     .type-news{
       height:30vw;
