--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1656,7 +1656,8 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
       flex-basis: 100%;
   text-transform: uppercase;
   color: #000000;
-  padding-left: 2%; }
+  padding-left: 2%;
+  margin-top: 5rem; }
 
 .post-type-archive-news .type-news {
   position: relative;
@@ -1697,7 +1698,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
   .post-type-archive-news .page-title {
     color: #FFFFFF;
     background: #000000;
-    width: 40%; }
+    width: 49%; }
   .post-type-archive-news .type-news {
     height: 30vw;
     margin-bottom: 0.5rem; }
