made mobile menu a tag take up whole container, added on blur back in for mobile menu

--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -70,7 +70,7 @@
 }
 
 .mobile-menu li {
-	display: block; 
+	display: flex; 
 	padding:1rem 0 1rem 0; 
 	padding-left:1rem;
 }
@@ -83,6 +83,7 @@
 }
 
 .mobile-menu a{
+	width:100%;
 	text-decoration:none;
 	color:white;
 }
