--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -959,7 +959,9 @@ object {
     background-color: #18949a; }
 
 .mobile-menu li {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   padding: 1rem 0 1rem 0;
   padding-left: 1rem; }
 
@@ -970,6 +972,7 @@ object {
   padding-left: 1rem; }
 
 .mobile-menu a {
+  width: 100%;
   text-decoration: none;
   color: white; }
 
