--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -5,12 +5,19 @@
 /* Story */
 .single-story, .post-type-archive-story {
 
-  .story-nav {
-    background-color: $red;
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) );
-    text-decoration: none;
+  // .nav-story {
+
     
-  }
+  //   background-color: $red;
+  //   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) );
+  //   text-decoration: none;
+
+  //   ul {
+  //     display: flex;
+  //     flex-flow: row nowrap;
+  //     list-style-type: none;
+  //   }
+  // }
 
   .entry-header {
     width: 100%;
@@ -349,6 +356,7 @@
         margin: 0;
         column-count: 2;
         column-gap: $base__space-unit*2;
+        color: $white;
       }
     }
   }
