--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1700,11 +1700,6 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
   /* End of Vision */
   /* Heritage */
   /* End of Heritage */ }
-  .single-story .story-nav, .post-type-archive-story .story-nav {
-    background-color: #D91F18;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5)));
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    text-decoration: none; }
   .single-story .entry-header, .post-type-archive-story .entry-header {
     width: 100%;
     height: 100%;
@@ -1873,14 +1868,14 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
       margin: 0; }
   .single-story .vision-container .entry-header, .post-type-archive-story .vision-container .entry-header {
     margin-left: 0; }
-    @media (min-width: 1024px) {
+    @media (min-width: 750px) {
       .single-story .vision-container .entry-header .entry-title, .post-type-archive-story .vision-container .entry-header .entry-title {
         width: 50%; } }
   .single-story .vision-container .entry-content, .post-type-archive-story .vision-container .entry-content {
     margin-top: 0; }
     .single-story .vision-container .entry-content ul, .post-type-archive-story .vision-container .entry-content ul {
       padding-left: 2.5%; }
-    @media (min-width: 1024px) {
+    @media (min-width: 750px) {
       .single-story .vision-container .entry-content, .post-type-archive-story .vision-container .entry-content {
         padding: 2.5% 0 0 2.5%; } }
   @media (min-width: 750px) {
@@ -1924,14 +1919,14 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
     .single-story .vision-wrapper-mobile img, .post-type-archive-story .vision-wrapper-mobile img {
       min-width: 100%;
       min-height: 100%; }
-    @media (min-width: 1024px) {
+    @media (min-width: 750px) {
       .single-story .vision-wrapper-mobile, .post-type-archive-story .vision-wrapper-mobile {
         -ms-flex-preferred-size: 50%;
             flex-basis: 50%; }
         .single-story .vision-wrapper-mobile img, .post-type-archive-story .vision-wrapper-mobile img {
           min-height: 10%;
           padding-right: 2.5%; } }
-  @media (min-width: 1024px) {
+  @media (min-width: 750px) {
     .single-story .heritage-container, .post-type-archive-story .heritage-container {
       background-color: #D91F18;
       background: url("../../images/orca-background.png") no-repeat center;
@@ -1990,7 +1985,8 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
       -webkit-column-count: 2;
               column-count: 2;
       -webkit-column-gap: 3rem;
-              column-gap: 3rem; } }
+              column-gap: 3rem;
+      color: #ffffff; } }
 
 /**
  * Owl Carousel v2.2.1
