--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -172,13 +172,7 @@ header{
 		height: 147px;
 		position: relative;
 	}
-	.desktop-header-logo{
-		display:block;
-		position: absolute;
-		height: 5.25rem;
-		margin: 43px 0 0 0.75rem;
-		width: auto;
-	}
+	
 	.main-navigation {
 		height: 5.25rem;
 		margin: 43px 0 0;
@@ -222,3 +216,23 @@ header{
 		height:90%
 	}
 }	
+@media screen  and (min-width:750px){
+	
+	.desktop-header-logo{
+		display:block;
+		position: absolute;
+		height: 4rem;
+		margin: 63px 0 0 0.75rem;
+		width: auto;
+	}
+}
+@media screen  and (min-width:1024px){
+	
+	.desktop-header-logo{
+		display:block;
+		position: absolute;
+		height: 5.25rem;
+		margin: 43px 0 0 0.75rem;
+		width: auto;
+	}
+}
