--- a/themes/csl/sass/_seasonal-events.scss
+++ b/themes/csl/sass/_seasonal-events.scss
@@ -38,23 +38,23 @@
   list-style: none;
   padding-left: 2.5%;
   li {
-    &:first-of-type::after {
+    &::after {
       content: '|';
-      padding: 1.25rem;
-      font-weight: 400;
+      margin: 0 1.25rem;
     }
-    display: inline;
+    &:last-of-type::after {
+      content: '';
+    }
+    height: 2rem;
+    line-height: 2rem;
+    display: inline-block;
     font-size: 20px;
     text-transform: uppercase;
-    letter-spacing: 1px;
     a {
       text-decoration: none;
       color: white;
       &:visited {
         color: white;
-      }
-      &:hover {
-        font-weight: 900;
       }
     }
   }
