--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -55,8 +55,15 @@
 	width:85%; 
 	height:auto;
 	background:$teal;
-	position:absolute; 
+	position:fixed; 
+	padding-top : 5.75rem; 
+	@include desktop {
+		padding-top: 147px;
+	}
 	text-align:left;
+	min-height: 79vh;
+	max-height: 100vh;
+	overflow-y: scroll;
 }
 
 .mobile-menu ul {
