--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -948,8 +948,15 @@ object {
   width: 85%;
   height: auto;
   background: #1DAFB8;
-  position: absolute;
-  text-align: left; }
+  position: fixed;
+  padding-top: 5.75rem;
+  text-align: left;
+  min-height: 79vh;
+  max-height: 100vh;
+  overflow-y: scroll; }
+  @media (min-width: 750px) {
+    .mobile-menu {
+      padding-top: 147px; } }
 
 .mobile-menu ul {
   text-transform: uppercase;
