add owl carousel to single event.

--- a/themes/csl/sass/_owl-theme-default.scss
+++ b/themes/csl/sass/_owl-theme-default.scss
@@ -7,6 +7,9 @@
  * 	Default theme - Owl Carousel CSS File
  */
 .owl-theme .owl-nav {
+  &.disabled {
+    display: none;
+  }
   .owl-prev {
     position: absolute;
     top: 175px;
