--- a/themes/csl/sass/_seasonal-events.scss
+++ b/themes/csl/sass/_seasonal-events.scss
@@ -41,6 +41,7 @@
     &::after {
       content: '|';
       margin: 0 1.25rem;
+      font-weight: 400;
     }
     &:last-of-type::after {
       content: '';
