changed social media widget z index to 1 because it was going infront of mobile menu, set min height to news content

--- a/themes/csl/sass/_news-page.scss
+++ b/themes/csl/sass/_news-page.scss
@@ -30,7 +30,7 @@
     position: absolute;
     bottom:0%;
     background-color: rgba(0,0,0,.6);
-    height:40%;
+    min-height:40%;
     font-size:0.75rem;
     font-weight:lighter;
     color:white;
