--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -5,20 +5,6 @@
 /* Story */
 .single-story, .post-type-archive-story {
 
-  // .nav-story {
-
-    
-  //   background-color: $red;
-  //   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) );
-  //   text-decoration: none;
-
-  //   ul {
-  //     display: flex;
-  //     flex-flow: row nowrap;
-  //     list-style-type: none;
-  //   }
-  // }
-
   .entry-header {
     width: 100%;
     height: 100%;
@@ -28,7 +14,7 @@
       .entry-title {
         color: $white;
         background-color: $black;
-        width: 25%;
+        width: 30%;
       }
     }
 
@@ -66,9 +52,10 @@
     }
 
     .one-house-title-mobile {
-
+      padding-top: $base__space-unit;
       @include desktop {
         display: none;
+        // padding-top: 0;
       }
     }
 
@@ -76,7 +63,7 @@
       @include desktop {
         background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) );
         padding: 2.5%;
-        width: 60%;
+        width: 70%;
       }
     }
 
@@ -125,9 +112,19 @@
       background: url("../../images/eagle-background.png") repeat top;
       background-size: contain;
       
-      h2 {
-        margin-top: 0;
-        padding-top: 2.5%;
+      .meet-our-team-title {
+        padding-top: $base__space-unit;
+        
+        h2 {
+      
+          @include desktop {
+            text-align: left;
+            padding-left: 2.5%;
+            color: $white;
+            background-color: $black;
+            width: 30%;
+          }
+        }
       }
     }
     .meet-our-team {
@@ -144,18 +141,38 @@
       }
 
       .team-member {
-        flex: 0 1 35%;
+        flex: 0 1 40%;
         display: flex;
         flex-flow: column nowrap;
         justify-content: space-between;
         align-items: center;
-        max-height: 100%;
         width: 50%;
+        height: 50%;
         text-align: center;
+        padding: 0 0 $base__space-unit;
+
+        .team-member__header {
+          .team-member__hyphen {
+            display: none;
+          }
+          @include desktop {
+            display: flex;
+            flex-flow: row nowrap;
+
+            .team-member__hyphen {
+              display: initial;
+            }
+          }
+        }
 
         .team-member__image {
           margin: 5% 0 2%;
-          border-radius: 50%;
+
+          img {
+            height: 25vh;
+            width: 25vh;
+            border-radius: 50%;
+          }
         }
 
         .team-member__name {
@@ -182,7 +199,7 @@
   .origin-container {
     @include desktop {
       background-color: $teal;
-      background: url("../../images/nature-background.png") no-repeat bottom;
+      background: url("../../images/eagle-background-teal.png") no-repeat bottom;
       background-size: cover;
     }
   }
@@ -194,6 +211,7 @@
     @include desktop {
       flex-flow: row nowrap;
       justify-content: space-between;
+      color: $white;
     }  
 
     .origin-featured-image {
@@ -203,6 +221,7 @@
       img {
         min-width: 100%;
         min-height: 100%;
+        max-height: 75vh;
       }
 
       @include desktop {
@@ -220,6 +239,19 @@
       flex: 0 1 50%;
       margin: 0;
     }
+    
+    .origin-image-two {
+
+      img {
+        min-width: 100%;
+        min-height: 100%;
+        max-height: 75vh;
+      }
+
+      @include desktop {
+        display: none;
+      }
+    }
   }
 /* End of Origin */
 
@@ -231,25 +263,25 @@
 
       @include desktop {
         .entry-title {
-          width: 50%;
+          width: 60%;
         }
       }
     }
 
-    .entry-content {
+    .entry-content p {
       margin-top: 0;
-
-      p {
-        // margin-top: 0;
-      }
-
-      ul {
-        padding-left: 5%;
-      }
 
       @include desktop {
         padding: 2.5% 0 0 2.5%;
       }
+    }
+
+    .entry-content ul {
+        padding: 0 0 $base__space-unit 2.5%;
+
+        @include desktop {
+          padding: 0 0 $base__space-unit 6%;
+        }
     }
 
     @include desktop {
@@ -294,6 +326,7 @@
   img {
     min-width: 100%;
     min-height: 100%;
+    max-height: 75vh;
   }
   
   @include desktop {
@@ -332,10 +365,10 @@
       img {
         min-width: 100%;
         min-height: 100%;
+        max-height: 75vh;
       }
 
       @include desktop {
-        // width: 40vw;
         order: 2;
         flex: 0 2 50%;
         padding: 2.5%;
