--- a/themes/csl/sass/_typography.scss
+++ b/themes/csl/sass/_typography.scss
@@ -38,17 +38,28 @@ h2 {
 	font-weight: bold; 
 }
 
+h3 {
+	font-size: 20px;
+	font-weight: bold;
+}
+
 p {
 	font-size: 18px;
 }
-@media screen and (min-width: $desktop-width) {
+@include desktop {
 	h1 {
 		font-size: 36px;
 		font-weight: bold;
 	}
+
 	h2 {
 		font-size: 30px;
 		font-weight: bold; 
+	}
+
+	h3 {
+		font-size: 22.5px;
+		font-weight: bold;
 	}
 	
 	p {
