--- a/themes/csl/sass/_contact-page.scss
+++ b/themes/csl/sass/_contact-page.scss
@@ -1,11 +1,15 @@
 
 // contact page //
 .page-template-contact{
-
+	.entry-content{
+		>p{
+			display:none;
+		}
+	}
 	.wpcf7-form{
 		background:url('../../images/contact-form-background.png');
 		padding-top:1rem;
-		padding-bottom:3rem;
+		padding-bottom:2.25rem;
 		width: 100vw;
 		p{
 			padding-left:1rem;
@@ -52,8 +56,8 @@
 
 	.entry-title{
 		position: absolute;
-    top: -2%;
-    left: 4%;
+    top: -1.35%;
+    left: 5%;
     text-transform: uppercase;
     font-size: 30px;
 	}
@@ -123,7 +127,7 @@
 		flex-direction: column;
 		position: absolute;
 		width:95%;
-		top: 48.5%;
+		top: 47%;
 		left: 2.5%;
 	}
 
@@ -180,13 +184,13 @@
 	text-transform:uppercase;
 	font-size:1.25rem !important;
 	font-weight:bold;
-	width: 8rem;
-	height: 4.25rem;
+	width: 6rem;
+	height: 3.5rem;
 	background:url('../../images/white-button.png')10px 10px;
 	background-size:cover;
 	background-position: center;
 	position: absolute;
-	right:2%;
+	right:5%;
 }
 
 /*	disables response output	 */
@@ -242,7 +246,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !importan
 			width:auto;
 			top: 5%;
 			right: 5%;
-			left:77%;
+			left:75%;
 		}
 		.eagle-logo{
 			top:70%;
@@ -256,8 +260,10 @@ div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !importan
 			margin-top:2rem;
 		}
 		.wpcf7-submit{
-		bottom:50%;
-		right:-35%;
+			width: 9rem;
+			height: 4.5rem;
+			bottom: 10%;
+			right: -55%;
 		}
 	}
 }
