--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1117,12 +1117,10 @@ header {
   background: #000000; }
 
 .footer-nav-wrapper {
-  height: auto;
-  padding-top: 2rem;
   font-size: 1.25rem;
   margin-left: 11vw;
-  margin-right: 1rem;
-  padding-left: 0; }
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%; }
   .footer-nav-wrapper a {
     color: white; }
 
@@ -1147,10 +1145,12 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 15rem;
+  height: 20rem;
   padding-top: 2rem; }
 
 .footer-logo-container {
@@ -1164,7 +1164,10 @@ header {
   background-repeat: no-repeat;
   margin-left: 10%;
   -ms-flex-item-align: center;
-      align-self: center; }
+      align-self: center;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2; }
 
 .footer-contact-info {
   display: -webkit-box;
@@ -1179,6 +1182,9 @@ header {
           justify-content: center;
   color: white;
   border-left: 1px solid white;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
   padding-left: 1rem;
   padding-right: 1rem; }
   .footer-contact-info p:nth-child(1) {
@@ -1213,6 +1219,8 @@ header {
   display: none; }
 
 @media screen and (min-width: 750px) {
+  .footer-container {
+    height: 15rem; }
   .site-info {
     position: relative; }
   .footer-nav-wrapper {
@@ -1226,12 +1234,12 @@ header {
     -ms-flex-pack: distribute;
         justify-content: space-around;
     position: absolute;
-    width: 67vw;
-    bottom: 35%;
-    margin-left: 7vw; }
+    width: 65vw;
+    bottom: 24%;
+    left: 9%; }
   .footer-logo-container {
-    height: 12vw;
-    width: 13vw;
+    height: 11vw;
+    width: 12vw;
     margin-left: 1%;
     background-size: 9vw; }
   .footer-contact-info {
@@ -1536,7 +1544,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
 
 .term-weekly .entry-title-wrapper {
   position: relative;
-  height: 100px;
+  height: 118px;
   -ms-flex-preferred-size: 90%;
       flex-basis: 90%; }
 
@@ -1643,7 +1651,8 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
         flex-wrap: wrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between; }
+            justify-content: space-between;
+    margin-bottom: 1rem; }
   .term-weekly .type-event {
     -ms-flex-preferred-size: 49%;
         flex-basis: 49%;
