--- a/themes/csl/sass/style.scss
+++ b/themes/csl/sass/style.scss
@@ -73,3 +73,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "story";
 @import "owl-carousel";
 @import "owl-theme-default";
+@import "404";
