--- a/themes/csl/sass/_404.scss
+++ b/themes/csl/sass/_404.scss
@@ -4,7 +4,8 @@
   }
   .page-content{
     background:url('../../images/nature-background.png');
-    height:75vh;
+    background-size:cover;
+    height:100vh;
     width:100vw;
     position: relative;
     background-repeat: no-repeat;
