--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -2408,7 +2408,8 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
 
 .error404 .page-content {
   background: url("../../images/nature-background.png");
-  height: 75vh;
+  background-size: cover;
+  height: 100vh;
   width: 100vw;
   position: relative;
   background-repeat: no-repeat;
